# R.A.G

./: .gitignore  DESIGN.md  Dockerfile  app.py  code.html  main.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh
.github/workflows/: cicd.yaml
research/: trials.ipynb
src/: helper.py  prompt.py
static/: style.css
templates/: chat.html
